ソート機能をレスポンシブ対応

--- a/app/views/user/contents/_paginate.html.erb
+++ b/app/views/user/contents/_paginate.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-8 offset-md-2 d-flex justify-content-center">
     <div class="paginate">
-      <%= paginate @contents %>
+      <%= paginate contents %>
     </div>
   </div>
 </div>
