検索でタグを選択した時のエラー修正

--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,6 +1,11 @@
 <h2>全ての投稿を確認する</h2>
-<%= render 'user/contents/index', contents: @contents %>
+<div class="row">
+    <%= render 'user/contents/sort_list' %>
+    
+    <div class="col-md-8">
+       <%= render 'user/contents/index', contents: @contents %>
+    </div>
+  
+</div>
 
-<%= render 'user/contents/paginate', contents: @contents%>
-
-
+    <%= render 'user/contents/paginate', contents: @contents%>
