検索のエラーメッセージを修正

--- a/app/views/user/contents/show.html.erb
+++ b/app/views/user/contents/show.html.erb
@@ -2,8 +2,10 @@
   <div class="col-md-1 mb-3" , id="favorite_buttons_<%= @content.id %>" >
     <%= render 'favorite' , content: @content %>
   </div>
+  
     <%= render 'show' , content: @content %>
-  <div class="col-md-4">
+    
+  <div class="col md-4">
     <div class="card">
       <div class="card-header">
         <h5 class="card-title">コメント欄</h5>
