--- a/app/views/user/contents/_show.html.erb
+++ b/app/views/user/contents/_show.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-7">
+<div class="col-md-7 mb-3">
   <div class="card">
     <div class="card-header">
       <h5 class="card-title">レビュー情報</h5>
