--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -8,8 +8,11 @@
           <% end %>
         </div>
         
-        <%= render 'mypage', contents: @contents, user: @user,favorite_contents: @favorite_contents , comment_contents: @comment_contents %>
-          
+        <%= render 'mypage', contents: @contents, 
+                             user: @user,
+                             favorite_contents: @favorite_contents, 
+                             comment_contents: @comment_contents %>
+
       </div>
     </div>
   </div>
