--- a/app/views/user/users/_content_index.html.erb
+++ b/app/views/user/users/_content_index.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="col-md-10 offset-md-1">
+    
     <% contents.each do |content| %>
       <div class="card mb-4">
         <div class="card-body">
@@ -52,8 +53,9 @@
         </div>
       </div>
     <% end %>
-    
-      <%= paginate @contents %>
 
   </div>
 </div>
+
+  <%= render 'user/contents/paginate', contents: contents %>
+
