--- a/app/views/user/users/_favorite_index.html.erb
+++ b/app/views/user/users/_favorite_index.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-md-10 offset-md-1">
-    <% user.favorites.each do |content| %>
+    
+    <% favorite_contents.each do |content| %>
       <div class="card mb-4">
         <div class="card-body">
           <% if user_signed_in? %>
@@ -46,8 +47,9 @@
         </div>
       </div>
     <% end %>
-    
-      <%= paginate @contents %>
+
 
   </div>
 </div>
+
+  <%= render 'user/contents/paginate', contents: favorite_contents %>
