--- a/app/views/user/users/myshow.html.erb
+++ b/app/views/user/users/myshow.html.erb
@@ -3,9 +3,13 @@
     <div class="card mb-4">
       <div class="card-body">
         
-        <%= render 'mypage', contents: @contents, user: @user,favorite_contents: @favorite_contents , comment_contents: @comment_contents %>
+        <%= render 'mypage', contents: @contents,
+                             user: @user,
+                             favorite_contents: @favorite_contents, 
+                             comment_contents: @comment_contents %>
           
       </div>
     </div>
   </div>
 </div>
+
