--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -22,7 +22,7 @@
         <td><%= image_tag @user.get_profile_image, size: "100x100" %></td>
       </tr>
         <tr>
-          <th>ステータス</th>
+          <th>停止ステータス</th>
           <td>
             <%= f.radio_button :is_deleted, false %><%= f.label :is_deleted, "有効", class: "text-active" %>
             <%= f.radio_button :is_deleted, true %><%= f.label :is_deleted, "停止済み", class: "text-invalid" %>
@@ -35,4 +35,9 @@
 
 <div class="text-center mt-3">
   <%= link_to "ユーザ一覧に戻る", admin_users_path, class: "btn btn-secondary" %>
+  <%= link_to 'このアカウントを抹消する',
+              admin_user_path, 
+              method: :delete, 
+              data: { confirm: '管理者権限でこのアカウントを完全に抹消しますか?' } ,
+              class: "btn btn-danger" %>
 </div>
