--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
       <% end %>
     <% end %>
     <% if admin_signed_in? %>
-      <div class="navbar-text">
+      <div class="navbar-text text-light">
         お疲れ様です！
       </div>
       <div class="nav-item">
