軽微な修正とデプロイ修正

--- a/app/views/user/users/_mypage.html.erb
+++ b/app/views/user/users/_mypage.html.erb
@@ -45,7 +45,7 @@
 
 <% if current_page?(myshow_path) %>
   <div class="row justify-content-center mt-4"> 
-        <%= link_to "プロフィールを編集する", edit_information_path, class: "btn btn-primary btn-sm" %>
+        <%= link_to "プロフィールの編集", edit_information_path, class: "btn btn-primary btn-sm" %>
         <span class="mx-2"></span>
         <%= link_to "パスワードの変更/退会", edit_user_registration_path, class: "btn btn-danger btn-sm" %>
   </div>
