--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -10,7 +10,7 @@
   </div>
 </div>
 <div class="text-center border-dotted border-t-2 border-fitting-pink py-20 mt-5">
-  <h1 class=" text-2xl title-font text-gray-900 mb-4">ととの〜るの使い方</h1>
+  <h1 class=" text-2xl howto-font text-gray-900 mb-4">ととの〜るの使い方</h1>
   <div class="text-base leading-relaxed mx-auto text-gray-500 ">
     <h5>ととの〜るはサウナが好きな人のためのサ活（サウナ活動）レビューサイトです。<br>日々の自分自身のサ活をレビューして次回のサウナをより素晴らしいものにしていくことを目的として作成しました。</h5>
   </div>
@@ -27,7 +27,7 @@
         <a class="sub-belonging" href="https://storyset.com/internet" target="_blank" >Internet illustrations by Storyset</a>
       </div>
       <div class="flex-grow">
-        <h2 class="font-kaisei text-gray-900 text-lg title-font font-medium mb-3">その１. <br>みんなのサ活を<br>見てみよう</h2>
+        <h2 class="font-kaisei text-gray-900 text-lg howto-font font-medium mb-3">その１. <br>みんなのサ活を<br>見てみよう</h2>
         <p class="leading-relaxed text-base text-gray-500">　まずはページ下部のゲストログインから投稿しているサ活レビューをみてみよう</p>
       </div>
     </div>
@@ -39,7 +39,7 @@
         <a class="sub-belonging" href="https://storyset.com/social-media" target="_blank" >Social media illustrations by Storyset</a>
       </div>
       <div class="flex-grow">
-        <h2 class="font-kaisei text-gray-900 text-lg title-font font-medium mb-3">その２. <br>日々のサ活を<br>レビューしよう</h2>
+        <h2 class="font-kaisei text-gray-900 text-lg howto-font font-medium mb-3">その２. <br>日々のサ活を<br>レビューしよう</h2>
         <p class="leading-relaxed text-base text-gray-500">　ユーザ登録をして、フッターの「投稿する」ボタンから自身のサ活をレビューして投稿してみよう</p>
       </div>
     </div>
@@ -51,7 +51,7 @@
         <a class="sub-belonging" href="https://storyset.com/online" target="_blank" >Online illustrations by Storyset</a>
       </div>
       <div class="flex-grow">
-        <h2 class="font-kaisei text-gray-900 text-lg title-font font-medium mb-3">その３. <br>レビューにいいねやコメントをしよう</h2>
+        <h2 class="font-kaisei text-gray-900 text-lg howto-font font-medium mb-3">その３. <br>レビューにいいねやコメントをしよう</h2>
         <p class="leading-relaxed text-base text-gray-500">　自分や他の人のレビューに<br>いいねやコメントができます<br>また、いいねやコメントをしたレビューはマイページから確認ができます</p>
       </div>
     </div>
