--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -84,6 +84,13 @@ header, footer {
   .index-username {
     text-align: center;
   }
+  
+/*投稿詳細*/
+/* 通常の画像サイズ */
+.review_image {
+  width: 500px;
+  height: 500px;
+}
 
 /*湯気エフェクト*/
 @keyframes steam01 {
