--- a/app/views/user/contents/_form.html.erb
+++ b/app/views/user/contents/_form.html.erb
@@ -4,12 +4,17 @@
       <%= f.text_field :title, class: "form-control form-control-sm" %>
     </div>
     <div class="form-group">
-      <%= f.label :text, "投稿内容" %>
+      <%= f.label :text, "本文" %>
       <%= f.text_area :text, class: "form-control form-control-sm", rows: 5 %>
+    </div>
+    <div class="form-group">
+      <%= f.label :review_image, "フォト（サウナグッツやサ飯を投稿しよう）" %>
+      <%= f.file_field :review_image, class: "form-control form-control-sm", accept: "image/*" %>
+      <!--accept: "image/*"を使い、画像ファイルしか投稿できないようする-->
     </div>
     <div class="form-row">
       <div class="form-group col-md-6">
-        <%= f.label :visit_day, "訪問した日(フォーム欄のカレンダーマークから入力してください)" %>
+        <%= f.label :visit_day, "訪問した日(フォーム欄のカレンダーマークから入力ができます)" %>
         <%= f.date_field :visit_day ,class: "form-control form-control-sm" %>
       </div>
       <div class="form-group col-md-6">
