--- a/app/views/user/contents/_show.html.erb
+++ b/app/views/user/contents/_show.html.erb
@@ -71,7 +71,7 @@
               </div>
               <%= image_tag content.review_image, class: "review_image clickable" %>
             <% else %>
-              <p><%= image_tag 'no_image', class: "review_image" %></p>
+              <p>フォトはありません</p>
             <% end %>
           </div>
           <div class="col-md-8" id="imageText">
