本番環境のエラー修正6

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
     <% unless current_page?(root_path) %>
       <% if user_signed_in? %>
         <div class="navbar-text text-light">
-          ようこそ、<%= current_user.name %>さん
+          ととの〜るへようこそ、<%= current_user.name %>さん
         </div>
         <div class="nav-item">
           <%= link_to destroy_user_session_path, method: :delete  do %>
