コメント時間表記の修正、テストコードの修正

--- a/app/views/user/users/edit.html.erb
+++ b/app/views/user/users/edit.html.erb
@@ -37,7 +37,7 @@
       <tr>
         <td colspan="2">
           <div class="d-flex justify-content-between">
-            <%= f.submit "編集内容を保存する", class: "btn-edit" %>
+            <%= f.submit "編集内容を保存する", class: "btn btn-primary" %>
             <%= link_to "マイページに戻る" , myshow_path , class: "btn btn-secondary" %>
             <%= link_to "アカウントを停止する", finalcheck_path, class: "btn btn-danger" %>
           </div>
