レビューの閲覧数機能を追加

--- a/app/views/user/contents/_index.html.erb
+++ b/app/views/user/contents/_index.html.erb
@@ -48,7 +48,8 @@
                   <%= tag.name %> 
                 <% end %>
               <% end %>  <br>
-              <strong>サウナ施設:</strong> <%= content.spot %>
+              <strong>サウナ施設:</strong> <%= content.spot %> <br>
+              <strong>閲覧数：</strong><%= content.impressionist_count %>
             </p>
           </div>
         </div>
