--- a/app/views/user/contents/_favorite.html.erb
+++ b/app/views/user/contents/_favorite.html.erb
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" , id="favorite_buttons_<%= @content.id %>">
   <div class="card-header">
     <h6 class="card-title">いいね</h6>
   </div>
